--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@docusaurus/preset-classic": "3.4.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^11.3.19",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.4.0",
