--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,27 +4,35 @@ on:
   push:
     branches:
       - main
-    # Review gh actions docs if you want to further define triggers, paths, etc
+    # Optionally specify paths or events if you want to further define triggers
     # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
 
 jobs:
   build:
     name: Build Docusaurus
     runs-on: ubuntu-latest
+
     steps:
+      # Checkout the repository
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      # Set up Node.js environment
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: yarn
+          node-version: '18'  # Specify the Node.js version you want to use
+          cache: yarn         # Use yarn cache to speed up installations
 
+      # Install dependencies
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+
+      # Build the Docusaurus website
       - name: Build website
         run: yarn build
 
+      # Upload the build artifact
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -34,18 +42,19 @@ jobs:
     name: Deploy to GitHub Pages
     needs: build
 
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
-      pages: write # to deploy to Pages
-      id-token: write # to verify the deployment originates from an appropriate source
+      pages: write  # Required permission to deploy to Pages
+      id-token: write  # Required permission for deployment verification
 
-    # Deploy to the github-pages environment
+    # Deploy to the GitHub Pages environment
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
 
     runs-on: ubuntu-latest
+
     steps:
+      # Deploy the built website to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
