Python Script for PostgreSQL

--- a/lib/config.json
+++ b/lib/config.json
@@ -5,9 +5,17 @@
       "password": "",
       "database": "mydb"
     },
+
     "mariadb": {
       "host": "localhost",
       "user": "root",
+      "password": "",
+      "database": "mydb"
+    },
+
+    "postgresql": {
+      "host": "localhost",
+      "user": "postgres",
       "password": "",
       "database": "mydb"
     }
